syntax = "proto3";

option go_package = "git.local/go-app/model";

package model;

// The greeting service definition.
service SampleAPI {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {};
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
